--- a/gradle.properties
+++ b/gradle.properties
@@ -1,3 +1,4 @@
-# Sets default memory used for gradle commands. Can be overridden by user or command line properties.
-# This is required to provide enough memory for the Minecraft decompilation process.
-org.gradle.jvmargs=-Xmx3G
+mappings=snapshot_20160518
+minecraft_version=1.10.2
+forge_version=12.18.3.2185
+mod_version=0.1
