--- a/gradle.properties
+++ b/gradle.properties
@@ -1,4 +1,8 @@
-mappings=snapshot_nodoc_20161220
+# Versions
 minecraft_version=1.11.2
 forge_version=13.20.0.2228
-mod_version=0.1
+mappings=snapshot_nodoc_20161220
+mod_version=1.0
+
+# Gradle Properties
+-org.gradle.jvmargs=-Xmx3G
