--- a/gradle.properties
+++ b/gradle.properties
@@ -1,4 +1,8 @@
-mappings=snapshot_20160518
+# Versions
 minecraft_version=1.10.2
 forge_version=12.18.3.2185
-mod_version=0.1
+mappings=snapshot_20160518
+mod_version=1.0
+
+# Gradle Properties
+-org.gradle.jvmargs=-Xmx3G
