--- a/gradle.properties
+++ b/gradle.properties
@@ -2,7 +2,7 @@
 minecraft_version=1.12.2
 forge_version=14.23.4.2747
 mappings=snapshot_nodoc_20171003
-mod_version=3.5.0
+mod_version=4.0.0-dev
 
 # Gradle Properties
 -org.gradle.jvmargs=-Xmx3G
