--- a/gradle.properties
+++ b/gradle.properties
@@ -1,8 +1,8 @@
 # Versions
 minecraft_version=1.12.2
-forge_version=14.23.4.2747
+forge_version=14.23.5.2772
 mappings=snapshot_nodoc_20171003
-mod_version=4.0.0-dev
+mod_version=4.0.0
 
 # Gradle Properties
 -org.gradle.jvmargs=-Xmx3G
