Initial work on 1.14 port Still very early, does not yet compile.  There's a lot of new systems to learn.  Everything has been touched including lifecycle events, capabilities, networking, commands, configs, GUIs, potions, metadata, and localization.

--- a/build.gradle
+++ b/build.gradle
@@ -1,14 +1,16 @@
 buildscript {
-	repositories {
-		jcenter()
-		maven { url = "http://files.minecraftforge.net/maven" }
-	}
-	dependencies {
-		classpath 'net.minecraftforge.gradle:ForgeGradle:2.3-SNAPSHOT'
-	}
+    repositories {
+        maven { url = 'https://files.minecraftforge.net/maven' }
+        jcenter()
+        mavenCentral()
+    }
+    dependencies {
+        classpath group: 'net.minecraftforge.gradle', name: 'ForgeGradle', version: '3.+', changing: true
+    }
 }
-apply plugin: 'net.minecraftforge.gradle.forge'
+apply plugin: 'net.minecraftforge.gradle'
 // Only edit below this line, the above code adds and enables the necessary things for Forge to be setup.
+apply plugin: 'eclipse'
 
 // Link properties file (variables now accessible as config.var)
 ext.configFile = file "gradle.properties"
@@ -22,41 +24,72 @@ version = config.minecraft_version + "-" + config.mod_version
 group = "ca.wescook.nutrition"
 archivesBaseName = "Nutrition"
 
-sourceCompatibility = targetCompatibility = "1.8" // Need this here so eclipse task generates correctly.
-compileJava {
-	sourceCompatibility = targetCompatibility = "1.8"
-}
+sourceCompatibility = targetCompatibility = compileJava.sourceCompatibility = compileJava.targetCompatibility = '1.8' // Need this here so eclipse task generates correctly.
 
 minecraft {
-	version = config.minecraft_version + "-" + config.forge_version
-	runDir = "run"
-	mappings = config.mappings
+    mappings channel: config.mappings_channel, version: config.mappings_version
 
 	// Replace @VERSION@ in Nutrition.java with mod version from gradle.properties
-	replace '@VERSION@', config.mod_version
-	replaceIn 'Nutrition.java'
+	//replace '@VERSION@', config.mod_version
+	//replaceIn 'Nutrition.java'
+
+    // Default run configurations.
+    // These can be tweaked, removed, or duplicated as needed.
+    runs {
+        client {
+            workingDirectory project.file('run')
+
+            // Recommended logging data for a userdev environment
+            property 'forge.logging.markers', 'SCAN,REGISTRIES,REGISTRYDUMP'
+
+            // Recommended logging level for the console
+            property 'forge.logging.console.level', 'debug'
+
+            mods {
+                nutrition {
+                    source sourceSets.main
+                }
+            }
+        }
+
+        server {
+            workingDirectory project.file('run')
+
+            // Recommended logging data for a userdev environment
+            property 'forge.logging.markers', 'SCAN,REGISTRIES,REGISTRYDUMP'
+
+            // Recommended logging level for the console
+            property 'forge.logging.console.level', 'debug'
+
+            mods {
+                nutrition {
+                    source sourceSets.main
+                }
+            }
+        }
+
+        data {
+            workingDirectory project.file('run')
+
+            // Recommended logging data for a userdev environment
+            property 'forge.logging.markers', 'SCAN,REGISTRIES,REGISTRYDUMP'
+
+            // Recommended logging level for the console
+            property 'forge.logging.console.level', 'debug'
+
+            args '--mod', 'examplemod', '--all', '--output', file('src/generated/resources/')
+
+            mods {
+                nutrition {
+                    source sourceSets.main
+                }
+            }
+        }
+    }
 }
 
 dependencies {
-}
-
-processResources {
-	// This will ensure that this task is redone when the versions change.
-	inputs.property "version", project.version
-	inputs.property "mcversion", project.minecraft.version
-
-	// Replace stuff in mcmod.info, nothing else
-	from(sourceSets.main.resources.srcDirs) {
-		include 'mcmod.info'
-
-		// Replace version and mcversion
-		expand 'version':project.version, 'mcversion':project.minecraft.version
-	}
-
-	// Copy everything else that's not the mcmod.info
-	from(sourceSets.main.resources.srcDirs) {
-		exclude 'mcmod.info'
-	}
+	minecraft 'net.minecraftforge:forge:' + config.minecraft_version + "-" + config.forge_version
 }
 
 // Note: If resources are not loading in IntelliJ, switch runs from "Gradle" to "IntelliJ Idea"
