--- a/gradle.properties
+++ b/gradle.properties
@@ -1,8 +1,10 @@
 # Versions
-minecraft_version=1.12.2
-forge_version=14.23.5.2847
-mappings=snapshot_nodoc_20171003
+minecraft_version=1.14.4
+forge_version=28.2.3
+mappings_channel=snapshot
+mappings_version=20190719-1.14.3
 mod_version=4.6.0
 
 # Gradle Properties
--org.gradle.jvmargs=-Xmx3G
+org.gradle.jvmargs=-Xmx3G
+org.gradle.daemon=false
